test/libsolidity/syntaxTests/nameAndTypeResolution/159_storage_variable_initialization_with_incorrect_type_string.sol
contract c {
    uint a = "abc";
}
// ----
// TypeError 7407: (26-31='"abc"'): Type literal_string "abc" is not implicitly convertible to expected type uint256.
